Final da aula do dia 18/01/2022

--- a/M17AB_TrabalhoModelo_2021_22/M17AB_TrabalhoModelo_2021_22.csproj
+++ b/M17AB_TrabalhoModelo_2021_22/M17AB_TrabalhoModelo_2021_22.csproj
@@ -96,6 +96,7 @@
     <Content Include="Public\js\codigo.js" />
     <Content Include="Public\js\jquery.min.js" />
     <Content Include="Public\js\popper.min.js" />
+    <Content Include="recuperarpassword.aspx" />
     <Content Include="User\Emprestimos\Emprestimos.aspx" />
     <Content Include="User\Emprestimos\historico.aspx" />
     <Content Include="User\User.aspx" />
@@ -201,6 +202,13 @@
       <DependentUpon>MP.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="recuperarpassword.aspx.cs">
+      <DependentUpon>recuperarpassword.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="recuperarpassword.aspx.designer.cs">
+      <DependentUpon>recuperarpassword.aspx</DependentUpon>
+    </Compile>
     <Compile Include="User\Emprestimos\Emprestimos.aspx.cs">
       <DependentUpon>Emprestimos.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
