--- a/M17AB_TrabalhoModelo_2021_22/Web.config
+++ b/M17AB_TrabalhoModelo_2021_22/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <appSettings>
-    <add key="MeuEmail" value="alunosnet@gmail.com"/>
-    <add key="MinhaPassword" value="aminhapassword"/>
+    <add key="MeuEmail" value="80ed8d68f96439"/>
+    <add key="MinhaPassword" value="5c0ce236a1f9c3"/>
   </appSettings>
   <connectionStrings>
     <add name="sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\bd.mdf;Integrated Security=True;Connect Timeout=30"/>
