--- a/M17AB_TrabalhoModelo_2021_22/Web.config
+++ b/M17AB_TrabalhoModelo_2021_22/Web.config
@@ -7,11 +7,15 @@
   <appSettings>
     <add key="MeuEmail" value="80ed8d68f96439"/>
     <add key="MinhaPassword" value="5c0ce236a1f9c3"/>
+    <add key="Google.ReCaptcha.Secret"
+         value="6LepgmgdAAAAAB8i_xiphOiRFD8_wuSkEJRKXl0s"/>
   </appSettings>
   <connectionStrings>
     <add name="sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\bd.mdf;Integrated Security=True;Connect Timeout=30"/>
   </connectionStrings>
   <system.web>
+    <customErrors mode="RemoteOnly" defaultRedirect="~/Erros.aspx"/>
+    <sessionState timeout="5"></sessionState>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
