Chave do recaptcha retirada

--- a/M17AB_TrabalhoModelo_2021_22/Web.config
+++ b/M17AB_TrabalhoModelo_2021_22/Web.config
@@ -8,7 +8,7 @@
     <add key="MeuEmail" value="80ed8d68f96439"/>
     <add key="MinhaPassword" value="5c0ce236a1f9c3"/>
     <add key="Google.ReCaptcha.Secret"
-         value="6LepgmgdAAAAAB8i_xiphOiRFD8_wuSkEJRKXl0s"/>
+         value="ChaveRecaptcha"/>
   </appSettings>
   <connectionStrings>
     <add name="sql" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\bd.mdf;Integrated Security=True;Connect Timeout=30"/>
