--- a/M17AB_TrabalhoModelo_2021_22/M17AB_TrabalhoModelo_2021_22.csproj
+++ b/M17AB_TrabalhoModelo_2021_22/M17AB_TrabalhoModelo_2021_22.csproj
@@ -77,6 +77,10 @@
     <Content Include="Admin\Utilizadores\HistoricoUtilizador.aspx" />
     <Content Include="Admin\Utilizadores\RemoverUtilizador.aspx" />
     <Content Include="Admin\Utilizadores\utilizadores.aspx" />
+    <Content Include="App_Data\bd.mdf" />
+    <Content Include="App_Data\bd_log.ldf">
+      <DependentUpon>bd.mdf</DependentUpon>
+    </Content>
     <Content Include="Erros.aspx" />
     <Content Include="index.aspx" />
     <Content Include="Logbook.txt" />
@@ -269,7 +273,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Public\images\" />
   </ItemGroup>
   <PropertyGroup>
