Adicionada a opção das consultas. Revisão do código

--- a/M17AB_TrabalhoModelo_2021_22/M17AB_TrabalhoModelo_2021_22.csproj
+++ b/M17AB_TrabalhoModelo_2021_22/M17AB_TrabalhoModelo_2021_22.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin\Admin.aspx" />
+    <Content Include="Admin\Consultas\Consultas.aspx" />
     <Content Include="Admin\Emprestimos\Emprestimos.aspx" />
     <Content Include="Admin\Livros\EditarLivro.aspx" />
     <Content Include="Admin\Livros\Livros.aspx" />
@@ -117,6 +118,13 @@
     </Compile>
     <Compile Include="Admin\Admin.aspx.designer.cs">
       <DependentUpon>Admin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Consultas\Consultas.aspx.cs">
+      <DependentUpon>Consultas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Consultas\Consultas.aspx.designer.cs">
+      <DependentUpon>Consultas.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\Emprestimos\Emprestimos.aspx.cs">
       <DependentUpon>Emprestimos.aspx</DependentUpon>
